size and word wrap fix

--- a/mct-timer/wwwroot/css/timer.css
+++ b/mct-timer/wwwroot/css/timer.css
@@ -9,6 +9,7 @@
     font-size:18pt;
     resize: both;
     min-width: 400px;
+    width: 400px;
     overflow-y: scroll;
     border-style: solid;
     border-width: 2px;
